# lana-bank

./: .df-credentials.json  .envrc  .gitignore  AUTH.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  bacon.toml  dataform.json  deny.toml  docker-compose.docker.yml  docker-compose.yml  flake.nix  meltano.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
core/: Cargo.toml  schema.graphql
core/.sqlx/: query-0045c98c59ffbe26ddf256aba02c9032c20be6f7b8b27b4249b1437fedf069f4.json  query-018fe0c28cfa2195ddeb8af6dbf140c2d815fccaed1ab1a9cb0eb29d4e8bbc19.json  query-02557398451c93dfd8a38e432fe49fab36f60b70e20626808e2b468872f21015.json  query-02cdc8c50ee47fe180783166e55072897ad294a82bb20a5fa54649d0d6bf199c.json  query-031e9b8cb0fba348e0f107705ab7f7e798288b80385f1d931baa2e886553e9cd.json  query-0405575b2be806da0d1da533f0a1310ffa53080447fd05d318247e7ed3810246.json  query-04c1c0d825c0fb5811108919c1c086e1e4e278fc18d548e476a6304527ab60db.json  query-05368e124974a1441cd8234a0195c221f19dbf28dfcfc112de658d03872b16ac.json  query-05c4122235506c752311c578af5c5c7ea7017fb7c1436801ec415675e5807df5.json  query-0754d0490f4ecc36f00d34caca002d884da6dc32ed20803d95df9d83f319123b.json  query-08345ea495a83f2833ac2d2e5ae434a2fd5e8682b29bba07016a56dfed33257a.json  query-098b466fcb5babaa5a7aa12533de1f76adfcbcf943a68b18362804cdbe6466c0.json  query-0a5f712380c944e54acf7a13b18491192bc2dc22f0baa1355ed83dc3733580ff.json  query-0b0879ce86118d235a591e587a50bcc82dccb539a7459c29a9d8a229d9b9511d.json  query-0b8b8a62f5552e07d445417c7dc9d99ba4a7cfe3a3bd22843fd50cf510686745.json  query-0bca813147b6804cfbb1160195006af2859a4f0ae92cba4fee1c3ff36ddf559e.json  query-0dc206987a55e46bf442bb2c236873cce38c8e685fe4bb256bef871cd391b455.json  query-0f5dd85267a29534d6b673d2ed14525a424dd1127cf7554d775c511b493fbd5c.json  query-10629d2641a03fb26180820db58fcdab92eb581d0f241b701cb1a8f7156a15b5.json  query-1141601fa5912a68704a3a185a6c2e22af47868a6e2c6146bc34ea6321202706.json  query-12bac1007551c467a7d45518216c63235f50726e9161f12bcb419e0572b4c38d.json  query-12e35b443c5f12aa1e0681582d5d3dac925767d1a400d652a48c7f06b839ce69.json  query-14efb213961e42290a2a21d079e3e0b414e6babe50ce2991b57aa782402eda11.json  query-1546c05303be15f6901be8f0a7084c25f88d4e797a667e6645841b26ad95602e.json  query-1685561dea939586118d0ce9c97c5cc4b69baccb19d65bce11892b72148ed08a.json  query-18599666b158626a787a9c1bfe3ad75c1332f12487e0b5c7279f605d617fcab1.json  query-18e8db4e7a196662dc38aecd170833429130e8a098625cd0ab47e93084be2a68.json  query-199f9485f866a39d4e07e41122ecca301d7f4fef74c0013a55341717889c12ad.json  query-19bc462c1de1d2806ed476303297ba8f442f18a8afe85317f6d1a78fcbcba92e.json  query-1d90340e68c9effc2132766e2d31aaa957c2518629437f7a1076b8fd288fc160.json  query-1d93bd2de8cc6a8acf74aedf69a2f5826cb572c2b9847dc5b01c33ff7e984764.json  query-1e71095d8811ab3a5aa91a855fd3c950b4a7e496046d24afd6e18955230baee7.json  query-1f2e10dfb53ae0cb826f41ae7e931074b67152ff8474e7323daadca331d015f2.json  query-2124b1ac2f4a5134daa2dc922984935974af35f16845d0a838349a0ec080372d.json  query-21a5005cfcced3969c2312254d5131b15a248e3e5bc52fead48033cf688969dc.json  query-21c9501819f25dd87c9cf10d8116409c9614f8ec426c26122efd2dcab5723621.json  query-22910c58918e2792831f595ddf208dbadbdb979a3a75f3d97b3f2341d72b88df.json  query-2311e10a0fe45b421e2da6100871ad464260fa20297112e290048850ffda479a.json  query-275bd7b6321c21a377c847f5abe613c3532e3c066bda9c4d934c035d6c4c5d58.json  query-286df3092ce220727e3f719aff9c0550029b0c59b668212d69153caa9b4c8b27.json  (+167 more)
core/access/: Cargo.toml
core/access/src/: bootstrap.rs  config.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs
core/accounting/: Cargo.toml
core/accounting/.sqlx/: query-39b2975f64964faee17b6a926a582843f0cec499ac9b1ecae56a82b0819fab26.json  query-3e9775e68e6688f726c32fe9ee624b2556641f7645161a2b7366506ae9c17ba6.json  query-71b8315f5ad5e63793a9124b8bf0b974d7c7e8a387e47d629345d15c1313f31f.json
core/accounting/src/: error.rs  lib.rs  primitives.rs
core/accounting/tests/: helpers.rs  ledger_account.rs  ledger_transaction.rs  manual_transaction.rs  trial_balance.rs
core/app/: Cargo.toml
core/app/.sqlx/: query-0053425a7f367b7123ec293361861e3c0930f80e2905a9893c60e930db201975.json  query-02e93601d4569a2c329f600e5a05b0cfe82aba3b5fee16360f5ecc6894454d9a.json  query-0886859782b33715b90b1167c7ffd55360b76aa1a89803205268b0af46ba8980.json  query-1423232fbcf5454adfc7c02572aa1da98fd40c1f46eb2434788f8214ab4866fc.json  query-2cc6f9d3c0b2c720db2b118768e9d89f3c433e03b17953057b4f31b84273646a.json  query-4a0e948dc6f46be8cef58b4c67fb1bb160f932d1ae1fd16f2c64643f8f342d1a.json  query-53c3db4c1dd9a70cdb786146cfbddc823ed2138d9c7e34082b959e5ced5fdc9c.json  query-547e9629a38e364173d78fbc7f001ffe8bed831fc6ebb390766e7f4c2a578788.json  query-635e36cce88e8953bd0313f13a2c2a51c72c9ebe28977df0e1e41dc198e6f1d7.json  query-676554a1084d8fdf7119da21a2cd38db3178929a9ecfbfb0b7c85077a23b119a.json  query-72a502644acc7c9c72b37cfc1fa9ec617631fa8910cc6682de45c2095abb83c2.json  (+16 more)
core/app/src/: lib.rs  main.rs  (+1 more)
core/audit/: Cargo.toml
core/authz/: Cargo.toml
core/chart-of-accounts/: Cargo.toml
core/credit/: Cargo.toml
core/custody/: Cargo.toml
core/customer/: Cargo.toml
core/deposit/: Cargo.toml
core/document-storage/: Cargo.toml
core/governance/: Cargo.toml
core/migrations/: 20240517074612_core_setup.sql  20240517074612_lava_bank_setup.sql
core/money/: Cargo.toml
core/price/: Cargo.toml
core/rbac-types/: Cargo.toml
core/shared-primitives/: Cargo.toml
core/src/: constants.rs  lib.rs  main.rs  primitives.rs
core/tests/: authorization.rs  gcs.rs  helpers.rs  ledger.rs  price.rs  sumsub.rs  user.rs
core/user/: Cargo.toml
lana/admin-server/: Cargo.toml
lana/app/: Cargo.toml
lana/cli/: Cargo.toml
lana/customer-onboarding/: Cargo.toml
lana/customer-server/: Cargo.toml
lana/customer-sync/: Cargo.toml
lana/dashboard/: Cargo.toml
lana/entity-rollups/: Cargo.toml
lana/events/: Cargo.toml
lana/ids/: Cargo.toml
lana/notification/: Cargo.toml
lana/rbac-types/: Cargo.toml
(+3572 files in other folders)
