[workspace]
resolver = "2"
members = [
  "core/app",
  "lib/job",
  "lib/tracing-rs",
  "lib/es-entity",
  "lib/es-entity-macros",
]

[workspace.dependencies]
anyhow = "1.0.89"
async-graphql = { version = "7.0.11", default-features = false, features = ["dataloader", "tracing", "chrono", "playground"] }
async-graphql-axum = "7.0.9"
async-trait = "0.1.80"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", default-features = false, features = ["tracing", "typed-header"] }
chrono = { version = "0.4.31", features = ["clock", "serde"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
derive_builder = "0.20.0"
graphql_client = {version = "0.14.0", features = ["reqwest-rustls"]}
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
thiserror = "1.0.64"
uuid = { version = "1.10", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["http-proto", "reqwest-client"] }
opentelemetry-http = "0.13"
opentelemetry-semantic-conventions = "0.16.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.128"
serde_with = "3.8.1"
futures = "0.3.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal_macros = "1.34.2"
rust_decimal = "1.35.0"
rusty-money = { version = "0.4", features = ["iso", "crypto"] }
cala-types = { version = "0.2.5", package = "cala-ledger-core-types" }
base64 = { version = "0.22.1" }
jsonwebtoken = "9.3.0"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx-adapter = { version = "1.6.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}
ory-kratos-client = "1.1.0"
cached = { version = "0.53.1", features = ["async"] }
gcp_auth = { version = "0.12.2", features = ["webpki-roots"] }
gcp-bigquery-client = { git = "https://github.com/bodymindarts/gcp-bigquery-client.git", branch = "feat--webpki", features = ["rust-tls"] }
cloud-storage = { version = "0.11.1",default-features = false, features = ["rustls-tls", "sync", "global-client"] }
rand = "0.8"

[profile.release]
lto = true
