[workspace]
resolver = "2"
members = [
  "lana/cli",
  "lana/admin-server",
  "lana/customer-server",
  "lana/app",
  "lana/rbac-types",
  "lana/events",
  "lana/ids",
  "lana/dashboard",
  "lana/user-onboarding",
  "lana/customer-sync",
  "lana/notification",

  "lana/entity-rollups",

  "core/accounting",
  "core/access",
  "core/customer",
  "core/governance",
  "core/money",
  "core/deposit",
  "core/price",
  "core/credit",
  "core/custody",
  "core/document-storage",

  "lib/authz",
  "lib/audit",
  "lib/job",
  "lib/tracing-utils",
  "lib/outbox",
  "lib/jwks-utils",
  "lib/kratos-admin",
  "lib/cloud-storage"
]

[workspace.dependencies]
# es-entity = { git = "https://github.com/galoymoney/cala.git", branch = "main" }
# sim-time = { git = "https://github.com/galoymoney/cala.git", branch = "main" }
# cala-ledger = { git = "https://github.com/galoymoney/cala.git", branch = "main" }
es-entity = "0.6.0"
sim-time = "0.6.0"
cala-ledger = "0.6.0"

anyhow = "1.0.98"
async-graphql = { version = "7.0.17", default-features = false, features = [
  "dataloader",
  "tracing",
  "chrono",
  "playground",
  "tempfile",
] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.80"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", default-features = false, features = [
  "tracing",
  "typed-header",
] }
csv = "1.3.1"
chrono = { version = "0.4.40", features = [
  "clock",
  "serde",
], default-features = false }
clap = { version = "4.5.40", features = ["derive", "env"] }
derive_builder = "0.20.0"
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "rust_decimal",
  "uuid",
  "chrono",
  "json",
] }
thiserror = "2.0.8"
uuid = { version = "1.16", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", default-features = false, features = [
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
] }
opentelemetry-http = "0.13"
opentelemetry-semantic-conventions = "0.16.0"
tokio = { version = "1.45.1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
strum = { version = "0.26", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.133"
serde_with = "3.13.0"
futures = "0.3.29"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "multipart"] }
rust_decimal_macros = "1.37.1"
rust_decimal = "1.37.2"
rusty-money = { version = "0.4", features = ["iso", "crypto"] }
base64 = { version = "0.22.1" }
jsonwebtoken = "9.3.1"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
tower-http = { version = "0.6.5", features = ["cors"] }
lettre = { version = "0.11.17", default-features = false, features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"] }
sqlx-adapter = { version = "1.7", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
] }
cached = { version = "0.55.1", features = ["async"] }
gcp_auth = { version = "0.12.2", default-features = false, features = ["webpki-roots"] }
gcp-bigquery-client = { git = "https://github.com/bodymindarts/gcp-bigquery-client.git", branch = "feat--webpki", features = [
  "rust-tls",
] }
google-cloud-storage = { version = "0.24.0", default-features = false, features = [
  "rustls-tls",
  "auth",
] }
rand = "0.9"
serial_test = { version = "3.2.0", features = ["file_locks"] }
chacha20poly1305 = "0.10.1"
handlebars = "6.3.2"
schemars = { version = "0.8", features = ["derive", "chrono", "rust_decimal"] }

# Note: The workspace uses resolver = "2" which should unify features across all dependencies.
# The reqwest dependency is configured with rustls-tls to prevent OpenSSL dependencies in CI builds.
# The kratos-admin library now uses direct HTTP calls with reqwest instead of ory-kratos-client.

[profile.release]
lto = true 
