[package]
name = "lava-core"
version = "0.1.12-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lava-tracing = { path = "../lib/tracing-rs", features = ["http"] }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
derive_builder = { workspace = true }
graphql_client = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
cala-types = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = "9.3.0"
tower-http = { version = "0.5.2", features = ["cors"] }