[package]
name = "lava-core"
version = "0.1.101-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lava-tracing = { path = "../lib/tracing-rs", features = ["http"] }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
derive_builder = { workspace = true }
graphql_client = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rusty-money = { workspace = true }
cala-types = { workspace = true }
base64 = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sqlx-adapter = { workspace = true }
ory-kratos-client = { workspace = true }
cached = { workspace = true }

[dev-dependencies]
rand = "0.8"
serial_test = { version = "3.1.1", features = [ "file_locks" ] }
