[package]
name = "core-accounting"
version = "0.3.285-dev"
edition = "2024"

[features]
fail-on-warnings = []
graphql = [ "dep:async-graphql" ]

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
core-money = { path = "../money" }
outbox = { path = "../../lib/outbox" }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

rust_decimal = { workspace = true }
base64 = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true}

tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
authz = { path = "../../lib/authz", features = ["test-dummy"] }
rand = { workspace = true }
rust_decimal_macros = { workspace = true }
