[package]
name = "core-accounting"
version = "0.3.666-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
graphql = [ "dep:async-graphql" ]
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema"]

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
core-money = { path = "../money" }
job = { path = "../../lib/job" }
cloud-storage = { path = "../../lib/cloud-storage" }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sqlx = { workspace = true }

rust_decimal = { workspace = true }
base64 = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true}
async-trait = { workspace = true }
schemars = { workspace = true, optional = true }

tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
authz = { path = "../../lib/authz", features = ["test-dummy"] }
rand = { workspace = true }
rust_decimal_macros = { workspace = true }
