[package]
name = "lava-authz"
version = "0.1.143-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lava-audit = { path = "../audit" }

sqlx-adapter = { version = "1.6.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}

sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
