[package]
name = "chart-of-accounts"
version = "0.1.0"
edition = "2021"

[features]
fail-on-warnings = []

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

derive_builder = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
authz = { path = "../../lib/authz", features = ["test-dummy"] }
rand = { workspace = true }
