[package]
name = "core-credit"
version = "0.3.666-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []
graphql = [ "dep:async-graphql", "cala-ledger/graphql" ]
json-schema = ["dep:schemars", "cala-ledger/json-schema", "es-entity/json-schema", "core-money/json-schema", "job/json-schema", "core-price/json-schema", "outbox/json-schema"]
sim-time = ["dep:sim-time", "es-entity/sim-time"]

[dependencies]
core-money = { path = "../money" }
core-price = { path = "../price" }
core-customer = { path = "../customer" }
governance = { path = "../governance" }
core-accounting = { path = "../accounting" }

audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }
cloud-storage = { path = "../../lib/cloud-storage" }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-graphql = { workspace = true, optional = true }
sim-time = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
authz = { path = "../../lib/authz", features = ["test-dummy"] }
tokio = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
