[package]
name = "deposit"
version = "0.3.161-dev"
edition = "2021"

[features]

fail-on-warnings = []
graphql = [ "dep:async-graphql", "cala-ledger/graphql" ]

[dependencies]
core-money = { path = "../money" }
governance = { path = "../governance" }
core-customer = { path = "../customer" }
chart-of-accounts = { path = "../chart-of-accounts" }

audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-graphql = { workspace = true, optional = true }
base64 = { workspace = true }

[dev-dependencies]
authz = { path = "../../lib/authz", features = ["test-dummy"] }

tokio = { workspace = true }
anyhow = { workspace = true }
rust_decimal_macros = { workspace = true }
rand = { workspace = true }
