[package]
name = "governance"
version = "0.2.4-dev"
edition = "2021"

[features]

fail-on-warnings = []
graphql = ["shared-primitives/graphql", "es-entity/graphql", "dep:async-graphql"]

[dependencies]
shared-primitives = { path = "../shared-primitives" }

outbox = { path = "../../lib/outbox" }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
es-entity = { path = "../../lib/es-entity" }

uuid = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
async-graphql = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
