[package]
name = "governance"
version = "0.3.655-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[features]

fail-on-warnings = []
graphql = ["es-entity/graphql", "dep:async-graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema", "authz/json-schema", "outbox/json-schema"]

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }

es-entity = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
