[package]
name = "core-money"
version = "0.3.666-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
json-schema = ["schemars"]

[dependencies]

serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-graphql = { workspace = true }
schemars = { workspace = true, optional = true }
