[package]
name = "core-price"
version = "0.3.98-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
core-money = { path = "../money/" }

anyhow = { workspace = true }
cached = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
