[package]
name = "core-price"
version = "0.3.666-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []
json-schema = ["dep:schemars", "core-money/json-schema"]

[dependencies]
core-money = { path = "../money/" }

anyhow = { workspace = true }
cached = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
