[package]
name = "rbac-types"
version = "0.1.0"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
governance = { path = "../governance" }
shared-primitives = { path = "../shared-primitives" }

strum = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-graphql = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
