[package]
name = "shared-primitives"
version = "0.2.8-dev"
edition = "2021"

[features]

fail-on-warnings = []
graphql = ["es-entity/graphql"]

[dependencies]
es-entity = { path = "../../lib/es-entity" }
job = { path = "../../lib/job" }

uuid = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
