[package]
name = "admin-server"
version = "0.3.46-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }

governance = { path = "../../core/governance" }
deposit = { path = "../../core/deposit", features = ["graphql"] }
core-user = { path = "../../core/user" }

audit = { path = "../../lib/audit" }
tracing-utils = { path = "../../lib/tracing-utils" }
jwks-utils = { path = "../../lib/jwks-utils" }

es-entity = { workspace = true, features = ["graphql"] }

uuid = { workspace = true }
base64 = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
